@@ -1,3 +1,7 @@
+2007-06-14  Dalibor Topic  <robilad@kaffe.org>
+
+	* m4/classpath.m4: Removed unused check for jni.h.
+
 2007-06-13  Dalibor Topic  <robilad@kaffe.org>
 
 	* test/regression/Reflect.java: Simplified.
